# spl_token_22_extension

./: Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  splMetaData.json
app/: index.html  package-lock.json  package.json  vite.config.ts
app/idl/: spl.json  spl.ts
app/src/: App.tsx  index.css  main.tsx  polyfills.ts
app/src/components/: AMMOperations.tsx  HomePage.tsx  Navigation.tsx  StakingOperations.tsx  TokenOperations.tsx  WalletContextProvider.tsx
app/src/idl/: spl.json  spl.ts
app/src/styles/: AMMOperations.css  HomePage.css  Navigation.css  StakingOperations.css  TokenOperations.css
app/src/types/: global.d.ts
programs/spl/: Cargo.toml
programs/spl/src/: lib.rs
programs/spl/src/instructions/: amm.rs  instructions.rs  mod.rs  staking.rs  token.rs
programs/spl/src/state/: state.rs
programs/spl/src/utils/: utils.rs
tests/: amm.ts  spl.ts  stake.ts
