[package]
name = "spl"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
name = "spl"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = [
    "metadata",
    "token_2022",
    "token",
] }
proc-macro2 = "1.0.94"
spl-pod = "0.2.2"
spl-tlv-account-resolution = "0.6.3"
spl-transfer-hook-interface = "0.6.3"
spl-type-length-value = "0.4.3"
